# cobase

./: .dockerignore  .env.default  .gitignore  .releaserc.yml  Cargo.toml  Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum  main.go  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sqlx-data.json
.docker/nginx/: proxy.conf
.docker/nginx/templates/: default.conf.template
.github/workflows/: audit.yml  deploy.yml  release.yml  testing.yml
api/: Cargo.toml
api/openapi-spec/v3/: info-description.md  openapi.yaml
api/openapi-spec/v3/paths/: get-groups.yaml  group_create.yaml  group_get-all.yaml  groups.yaml
api/src/: command.rs  error.rs  group.rs  lib.rs  openapi.rs  projection.rs  room.rs  warehouse.rs
api/src/group/: aggregate.rs  command.rs  http.rs  mod.rs  projection.rs
cli/: Cargo.toml  package.json
cli/migrations/: 20221022132446_init.down.sql
cli/src/: main.rs  migrate.rs  openapi.rs  serve.rs
cluster/: Cargo.toml
cluster/src/: lib.rs
cmd/: Cargo.toml  root.go
cmd/migrations/: 20221022132446_init.down.sql  20221022132446_init.up.sql
cmd/serve/: root.go
cmd/src/: main.rs  migrate.rs  openapi.rs  reset.rs  serve.rs
cobase/: Cargo.toml
cobase-client/: Cargo.toml  build.rs
cobase-client/proto/timada/: cobase.proto
cobase-client/src/: lib.rs
cobase/src/: command.rs  lib.rs  query.rs  storage.rs
cobase/src/group/: command.rs  event.rs  mod.rs  projection.rs  query.rs
cobase/src/room/: aggregate.rs  command.rs  event.rs  mod.rs  projection.rs  query.rs
cobase/src/warehouse/: aggregate.rs  command.rs  event.rs  mod.rs  projection.rs  query.rs  service.rs
config/: cobase.standalone.yml  cobase.yml
configs/: default.yml  standalone.yml  test.yml
internal/api/: group.go  server.go
internal/http/: group.go  groups.go  server.go
migrations/: 20221022132446_init.down.sql  20221022132446_init.up.sql
spec/: openapi.yaml
spec/components/schemas/: CommandResponse.yaml  Group.yaml
web/: .eslintrc  index.html  package.json  vite.config.ts
web/public/: config.json
web/src/: Api.tsx  App.tsx  CheckAuth.tsx  Config.tsx  index.tsx
web/src/components/: NotFoundRoute.tsx
web/src/core/: api.tsx  config.tsx
web/src/routes/: index.tsx  path.ts
web/src/routes/warehouse/: [data-id].tsx  index.tsx  path.ts
web/src/utils/: action.ts  query.ts
