[package]
name = "cobase-api"
version = "0.5.5"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cobase = { path = "../cobase" }

pikav-client = "0.12.3"
actix = "0.13.0"
actix-web = "4.3.1"
actix-files = "0.6.2"
serde = "1.0.152"
serde_json = "1.0.93"
tracing = "0.1.37"
actix-jwks = "0.1.2"
evento = { version = "0.4.9", features = ["actix-web"] }
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "postgres", "chrono", "uuid", "json", "offline"] }
utoipa = { version = "3.0.3", features = ["actix_extras", "uuid"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["actix-web"] }

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]
