[package]
name = "cobase-api"
version = "0.7.1"
edition = "2021"
publish = false

[dependencies]
cobase = { path = "../cobase", version = "0.7.1" }
pikav-client = "0.15.2"
actix = "0.13.0"
actix-web = "4.3.1"
actix-files = "0.6.2"
serde = "1.0.160"
serde_json = "1.0.96"
tracing = "0.1.37"
actix-jwks = "0.2.1"
evento = { version = "0.5.7", features = ["actix-web"] }
sqlx = { version = "0.6.3", features = ["runtime-actix-rustls", "postgres", "chrono", "uuid", "json", "offline"] }
utoipa = { version = "3.2.1", features = ["actix_extras", "uuid"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }
chrono = { version = "0.4.24", default-features = false, features = ["clock", "serde"] }

[dependencies.uuid]
version = "1.3.1"
features = [
	"v4",
	"fast-rng",
	"macro-diagnostics",
	"serde",
]
