[package]
name = "cobase-cluster"
version = "0.5.3"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cobase = { path = "../cobase" }
timada-cobase-client = { path = "../cobase-client" }

tonic = { version = "0.8.3", features = ["tls"] }
prost = "0.11.8"
tracing = "0.1.37"
tokio = { version = "1.25.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
