[package]
name = "cmd"
version = "0.5.4"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cobase-api = { path = "../api" }
cobase-cluster = { path = "../cluster" }

config = "0.13.3"
serde = "1.0.152"
serde_json = "1.0.93"
clap = "4.1.8"
actix-rt = "2.8.0"
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "postgres", "chrono", "uuid", "json"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
utoipa = { version = "3.0.3", features = ["actix_extras"] }
