[package]
name = "cmd"
version = "0.8.0"
edition = "2021"
publish = false

[dependencies]
cobase = { path = "../cobase", version = "0.8.0" }
cobase-api = { path = "../api", version = "0.8.0" }
cobase-cluster = { path = "../cluster", version = "0.8.0" }
config = "0.13.3"
serde = "1.0.160"
serde_json = "1.0.96"
clap = "4.2.2"
actix-rt = "2.8.0"
sqlx = { version = "0.6.3", features = ["runtime-actix-rustls", "postgres", "chrono", "uuid", "json", "any"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
utoipa = { version = "3.2.1", features = ["actix_extras"] }
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
futures = "0.3.28"
