[package]
name = "timada-cobase-client"
version = "0.3.4"
edition = "2021"
license = "Apache-2.0"
description = "A client for timada cobase"
repository = "https://github.com/timada-org/cobase"
homepage = "https://timada.co"
documentation = "https://docs.rs/timada-cobase-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tracing = "0.1.37"
thiserror = "1.0.38"
tonic = { version = "0.8.3", features = ["tls"] }
prost = "0.11.6"
prost-types = "0.11.6"
prost-derive = "0.11.6"

[build-dependencies]
tonic-build = { version = "0.8.4", features = ["prost"] }
