[package]
name = "cobase"
version = "0.5.5"
edition = "2021"
publish = false
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-jwks = "0.1.2"
thiserror = "1.0.38"
nanoid = "0.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
parse-display = "0.8.0"
evento = { version = "0.4.5", features = ["actix-web"] }
pikav-client = "0.12.2"
utoipa = { version = "3.0.3", features = ["actix_extras", "uuid"] }
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "postgres", "chrono", "uuid", "json", "offline"] }
futures = "0.3.26"
validator = { version = "0.16.0", features = ["derive"] }

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]

