[package]
name = "cobase"
version = "0.7.1"
edition = "2021"
publish = false
license = "Apache-2.0"

[dependencies]
actix = "0.13.0"
actix-jwks = "0.2.1"
thiserror = "1.0.40"
nanoid = "0.4.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
parse-display = "0.8.0"
evento = { version = "0.5.7", features = ["actix-web"] }
pikav-client = "0.15.2"
sqlx = { version = "0.6.3", features = ["runtime-actix-rustls", "postgres", "chrono", "uuid", "json", "offline"] }
futures = "0.3.28"
validator = { version = "0.16.0", features = ["derive"] }
opendal = "0.31.0"
jsonm = "0.2.0"
chrono = { version = "0.4.24", default-features = false, features = ["clock", "serde"] }

[dependencies.uuid]
version = "1.3.1"
features = [
	"v4",
	"fast-rng",
	"macro-diagnostics",
	"serde",
]

[dev-dependencies]
config = "0.13.3"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
